--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-node_modules
-public/bundle.*
-package-lock.json
-yarn.lock
+/node_modules/
+/src/node_modules/@sapper/
+yarn-error.log
+/__sapper__/
